WeatherReport_Package/objects/LDC_Weather_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>LDC Weather Settings</label>
    <fields>
        <fullName>endpoint__c</fullName>
        <label>endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>host__c</fullName>
        <label>host</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <label>username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>